Loop selection not working with Emulate MMB + Left mouse select #20711

Closed
opened 2010-01-17 11:22:41 +01:00 by Joe Hultgren · 12 comments

%%%I've just built build 26047 on mac osx snow leopard

I was trying to use edge select with ALT LEFT CLICK but instead of doing edge select it rotated the camera

I got edge select to work by turning off "Emulate 3 button mouse" in user preferences even though it says it is off with left mouse button select on

so rotate camera is overriding edge loop select when emulate 3 button mouse and left click select are both on

There seems to be a problem with emulate 3 button mouse not being deactivated when left click select is used.

either this setting is not being turn off internally when left mouse select is being used or should be set to alt right mouse button when using left mouse select

I didn't have this problem in earlier builds with my last build being approximately on january 10th
%%%

%%%I've just built build 26047 on mac osx snow leopard I was trying to use edge select with ALT LEFT CLICK but instead of doing edge select it rotated the camera I got edge select to work by turning off "Emulate 3 button mouse" in user preferences even though it says it is off with left mouse button select on so rotate camera is overriding edge loop select when emulate 3 button mouse and left click select are both on There seems to be a problem with emulate 3 button mouse not being deactivated when left click select is used. either this setting is not being turn off internally when left mouse select is being used or should be set to alt right mouse button when using left mouse select I didn't have this problem in earlier builds with my last build being approximately on january 10th %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Confirmed on a Windows build (r26180). You've actually helped me to find a solution for a bug I came across, so thanks :)

I was trying to assign "Alt + Left Mouse" as a shortcut for view3d.rotate, to make view rotation behave like it does in Silo or Maya, but it did not work at all until I disabled the three mouse button emulation.

If it wasn't for this bug report, I would still not have it working, because my settings were at left click select instead of right click, meaning I hadn't noticed the (disabled) option for mouse button emulation yet. I agree, it would be nice if this option would be disabled when choosing for left mouse selection.

btw. Is there still a point in keeping this left/right-select option around while shortcuts are fully customizable now? Even for a known Blender user, I'm still finding it confusing to use "Select" and "Action" to assign shortcuts to, instead of just "Left" or "Right" (or the other way around).%%%

%%%Confirmed on a Windows build (r26180). You've actually helped me to find a solution for a bug I came across, so thanks :) I was trying to assign "Alt + Left Mouse" as a shortcut for view3d.rotate, to make view rotation behave like it does in Silo or Maya, but it did not work at all until I disabled the three mouse button emulation. If it wasn't for this bug report, I would still not have it working, because my settings were at left click select instead of right click, meaning I hadn't noticed the (disabled) option for mouse button emulation yet. I agree, it would be nice if this option would be disabled when choosing for left mouse selection. btw. Is there still a point in keeping this left/right-select option around while shortcuts are fully customizable now? Even for a known Blender user, I'm still finding it confusing to use "Select" and "Action" to assign shortcuts to, instead of just "Left" or "Right" (or the other way around).%%%
Member

%%%I also have the same problem on windows vista with the build 26211. Some precision on the problem. Still in right mouse select, if i do a ring select, the purple edge ring indicator is showed but when releasing, no selection is affected. While pressing ctrl+alt+lmb, i must move a little my cursor to make my selection. An interactive selection will appear(in orange) corresponding to my position. Not as it should be i think.

To discuss about the left/right-select. "Is there still a point in keeping this left/right-select
option around while shortcuts are fully customizable now?" If you want to generally change the right select to left select, it would take you a lot of time to change all the shortcuts. It is true that there could have a left click preset and a right click preset in blender. But in production, if you share a preset you have done yourself and your partner is not accustomed with right click select. Then it would take him long time to adapt your preset to its needs. I think "Select" and "Action" is better than "left" or "right". I also preserves the presets from unconsistencies.%%%

%%%I also have the same problem on windows vista with the build 26211. Some precision on the problem. Still in right mouse select, if i do a ring select, the purple edge ring indicator is showed but when releasing, no selection is affected. While pressing ctrl+alt+lmb, i must move a little my cursor to make my selection. An interactive selection will appear(in orange) corresponding to my position. Not as it should be i think. To discuss about the left/right-select. "Is there still a point in keeping this left/right-select option around while shortcuts are fully customizable now?" If you want to generally change the right select to left select, it would take you a lot of time to change all the shortcuts. It is true that there could have a left click preset and a right click preset in blender. But in production, if you share a preset you have done yourself and your partner is not accustomed with right click select. Then it would take him long time to adapt your preset to its needs. I think "Select" and "Action" is better than "left" or "right". I also preserves the presets from unconsistencies.%%%

%%%Dany, the purple edge ring you're seeing is from the loopcut tool. Too many tools assigned to the same buttons it seems.%%%

%%%Dany, the purple edge ring you're seeing is from the loopcut tool. Too many tools assigned to the same buttons it seems.%%%

%%%Confirmed on 26631 WinXP32. Disabling MMB emulation fixes it.%%%

%%%Confirmed on 26631 WinXP32. Disabling MMB emulation fixes it.%%%
Member

%%%Your reported issue has been fixed in SVN. Thanks for taking the
time to report!.%%%

%%%Your reported issue has been fixed in SVN. Thanks for taking the time to report!.%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'
Philip reopened this issue 2013-12-08 14:02:34 +01:00

Added subscriber: @neo_phi

Added subscriber: @neo_phi

On OSX 10.9 using Blender 2.69.0 (r60991) this is not resolved.

  • Emulate 3-button mouse is on.
  • Select with Left is on.
On OSX 10.9 using Blender 2.69.0 (r60991) this is not resolved. - Emulate 3-button mouse is on. - Select with Left is on.

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'

This bug report is 3 years old, best not to reopen it, please report a new bug.

This bug report is 3 years old, best not to reopen it, please report a new bug.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#20711
No description provided.