Fix [#20711] Loop selection not working with Emulate MMB + Left mouse select

Emulate 3 button mouse is now disabled when Left mouse select is used, to
prevent keymap conflicts. Configs for single button macs etc we can do with
keymap presets.